force-app/main/default/objects/PMC_RetailerAccountChange__e/PMC_RetailerAccountChange__e.object-meta.xml
<CustomObject>
    <label>PMC Retailer Account Change</label>
    <pluralLabel>PMC Retailer Account Changes</pluralLabel>
</CustomObject>