force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <description>Create or Update (as text, because PE doesn&apos;t support picklist)</description>
    <label>Change Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>