force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>Event Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>