force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>40</length>
    <type>Text</type>
</CustomField>