force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>40</length>
    <type>Text</type>
</CustomField>