force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <label>Product List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>