force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/PublishedByType__c.field-meta.xml
<CustomField>
    <fullName>PublishedByType__c</fullName>
    <label>Published By Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>