force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/PublishedByUserId__c.field-meta.xml
<CustomField>
    <fullName>PublishedByUserId__c</fullName>
    <label>Published By User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>