force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/PublishedByUserName__c.field-meta.xml
<CustomField>
    <fullName>PublishedByUserName__c</fullName>
    <label>Published By User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>