force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/PublisherType__c.field-meta.xml
<CustomField>
    <fullName>PublisherType__c</fullName>
    <label>Publisher Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>