force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>