force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>