force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>