force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/SourceFlowApiName__c.field-meta.xml
<CustomField>
    <fullName>SourceFlowApiName__c</fullName>
    <label>Source Flow Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>