force-app/main/default/objects/PMC_RetailerAccountChange__e/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <label>Source Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>